--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="twitter:site" content="@darkforest_eth" />
 
     <!-- favicon stuff -->
-    <link rel="shortcut icon" href="/public/favicons.ico" />
+    <link rel="shortcut icon" href="/public/favicon.ico" />
     <link rel="apple-touch-icon" sizes="57x57" href="/public/favicons.ico/apple-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="60x60" href="/public/favicons.ico/apple-icon-60x60.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="/public/favicons.ico/apple-icon-72x72.png" />
